# nrf52840_ble

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: main.rs
