[package]
name = "nrf52840_ble"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Akiyuki Okayasu <akiyuki.okayasu@gmail.com>"]

[dependencies]
embassy-executor = { version = "0.5.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-sync = { version = "0.5.0" }
embassy-nrf = { version = "0.1.0", features = [
    "defmt",
    "gpiote",
    "time-driver-rtc1",
    "nrf52840",
] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
nrf-softdevice = { version = "0.1.0", features = [
    "defmt",
    "ble-peripheral",
    "critical-section-impl",
    "nrf52840",
    "s140",
    "ble-gatt-server",
] }
nrf-softdevice-s140 = "0.1.1"

# defmtの<invalid location: defmt frame-index: xxx>といったエラーを抑制するためにdebugレベルを上げる。
# 最終的な製品リリース時にはdebugレベルを下げた方がいいかもしれない。
[profile.release]
debug = 2
